--- a/jetty-client/pom.xml
+++ b/jetty-client/pom.xml
@@ -52,6 +52,7 @@
           </execution>
         </executions>
       </plugin>
+      <!-- TODO is this needed?
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
@@ -89,6 +90,7 @@
           </execution>
         </executions>
       </plugin>
+      -->
     </plugins>
   </build>
 
