--- a/pom.xml
+++ b/pom.xml
@@ -118,8 +118,8 @@
     <module>jetty-util-ajax</module>
     <module>apache-jsp</module>
     <module>apache-jstl</module>
-    <module>jetty-maven-plugin</module>
-    <module>jetty-jspc-maven-plugin</module>
+<!--    <module>jetty-maven-plugin</module>-->
+<!--    <module>jetty-jspc-maven-plugin</module>-->
     <module>jetty-deploy</module>
     <module>jetty-start</module>
     <module>jetty-plus</module>
