Issue #2072 Ensure OSGi fragments parsed only once for annotations
Signed-off-by: Jan Bartel <janb@webtide.com>

--- a/demos/demo-spec/demo-spec-webapp/pom.xml
+++ b/demos/demo-spec/demo-spec-webapp/pom.xml
@@ -74,6 +74,7 @@
             <Web-ContextPath>/</Web-ContextPath>
             <Bundle-ClassPath>.,WEB-INF/classes,WEB-INF/lib</Bundle-ClassPath>
             <Jetty-ContextFilePath>/META-INF/plugin-context.xml</Jetty-ContextFilePath>
+            <Require-Bundle>org.eclipse.jetty.servlet-api</Require-Bundle>
           </instructions>
         </configuration>
       </plugin>
